# ParallelProcessing

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  clinfo.txt  cpu.txt
lab1/: CMakeLists.txt  build.ninja  gcc.ods  icc.ods  lab1.c  measure.sh  measure_all.sh  report.tex  suncc.ods  verify.py  verify.sh
measurements/: lab1-gcc-par-1.csv  lab1-gcc-par-2.csv  lab1-gcc-par-4.csv  lab1-gcc-par-6.csv  lab1-gcc-seq.csv  lab2-1-stat.txt  lab2-1.csv  lab2-2-stat.txt  lab2-2.csv  lab2-3-stat.txt  lab2-3.csv  lab2-4-stat.txt  lab2-4.csv  lab2-6-stat.txt  lab2-6.csv  lab2-8-stat.txt  lab2-8.csv  lab3--O0-1-stat.txt  lab3--O0-1.csv  lab3--O0-2-stat.txt  lab3--O0-2.csv  lab3--O0-3-stat.txt  lab3--O0-3.csv  lab3--O0-4-stat.txt  lab3--O0-4.csv  lab3--O0-6-stat.txt  lab3--O0-6.csv  lab3--O0-8-stat.txt  lab3--O0-8.csv  lab3--O1-1-stat.txt  lab3--O1-1.csv  lab3--O1-2-stat.txt  lab3--O1-2.csv  lab3--O1-3-stat.txt  lab3--O1-3.csv  lab3--O1-4-stat.txt  lab3--O1-4.csv  lab3--O1-6-stat.txt  lab3--O1-6.csv  lab3--O1-8-stat.txt  (+186 more)
src/: CMakeLists.txt  lab4.c  main.c  main.cl  measure.py  measure.sh  measure_all.sh  plot_data.py  plots.py  report.tex  schedule.c  verify.py
